fixes overflow issue w/ pikaday

--- a/sass/partials/search/_search.scss
+++ b/sass/partials/search/_search.scss
@@ -485,7 +485,7 @@ h2 {
     background-repeat: no-repeat;
     background-size: 75% 75%;
     white-space: nowrap;
-    text-indent: 100%;
+    text-indent: -9999px;
     overflow: hidden;
     opacity: .5;
     *position: absolute;
